edit design for product details

--- a/MPortal/Utilities/Localization/ar.lproj/Localizable.strings
+++ b/MPortal/Utilities/Localization/ar.lproj/Localizable.strings
@@ -36,5 +36,8 @@
 // MARK: - BTNs Enum
 "nextStepBtn"="الخطوة التالية";
 "continueBtn"="إستمرار";
+"butNowBtn"="شراء الآن";
+"withdrawalBtn"="إنسحاب";
 //MARK: - TxtFields Enum
 "writePriceTF"="اكتب المبلغ";
+
