--- a/MPortal/Utilities/Localization/en.lproj/Localizable.strings
+++ b/MPortal/Utilities/Localization/en.lproj/Localizable.strings
@@ -36,6 +36,8 @@
 // MARK: - BTNs Enum
 "nextStepBtn"="Next Step";
 "continueBtn"="Continue";
+"butNowBtn"="Buy now";
+"withdrawalBtn"="Withdraw";
 
 //MARK: - TxtFields Enum
 "writePriceTF"="write price";
